<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/saintListFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:name="com.example.pravoslaviebg.ui.saint.SaintListFragment"
            android:title="Светци" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_monastery"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_monastery" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_book" />
        <item
            android:id="@+id/nav_question_game"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_question_game" />
    </group>
</menu>